objects/WPChartMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>ChartType__c</fullName>
        <description>The type of chart displayed</description>
        <inlineHelpText>The type of chart displayed</inlineHelpText>
        <label>Chart Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>The number of the chart on the page</description>
        <inlineHelpText>The number of the chart on the page</inlineHelpText>
        <label>Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageName__c</fullName>
        <description>Name of the page the chart is displayed on</description>
        <inlineHelpText>Name of the page the chart is displayed on</inlineHelpText>
        <label>Page Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportID__c</fullName>
        <description>The ID of the Report with the chart data to be displayed</description>
        <inlineHelpText>The ID of the Report with the chart data to be
			displayed</inlineHelpText>
        <label>Report ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <description>Custom Metadata definition for the mapping of Wheel
		Planning charts</description>
    <label>Chart Report Mapping</label>
    <pluralLabel>Chart Report Mappings</pluralLabel>
</CustomObject>